--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 <body>
 	
 	<div class="container">
-		<div class="section gallery">
-
+		<section class="gallery">
 			<div class="frame">
 				Lorem ipsum dolor sit amet.			
 			</div>
@@ -22,8 +21,7 @@
 			<div class="frame">
 				Lorem ipsum dolor sit amet.			
 			</div>
-
-		</div>
+		</section>
 	</div>
 
 
