--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
 
@@ -16,11 +17,12 @@
 				Lorem ipsum dolor sit amet.			
 			</div>
 			<div class="frame">
-				Lorem ipsum dolor sit amet.			
+				awdawdawda awdawdadawdsdwd 			
 			</div>
 			<div class="frame">
-				Lorem ipsum dolor sit amet.			
+				daOAWDOAWDOAOKWDKOAWDOKDKOAWD			
 			</div>
+
 		</section>
 	</div>
 
