--- a/index.html
+++ b/index.html
@@ -8,19 +8,41 @@
 
 	<link rel="stylesheet" href="css/main.css">
 	<script src="js/app.js" defer></script> 
+	
 </head>
 <body>
 	
 	<div class="container">
 		<section class="gallery">
-			<div class="frame">
-				Lorem ipsum dolor sit amet.			
+			<div class="frame frame_bg">
+				<div class="frame_content">
+					<h2>ЕБАТЬ ТЫ ЧЁРТ!</h2>
+				</div>
+			</div>
+			<div class="frame frame_bg">
+				<div class="frame_content">
+					<div class="frame-media frame-media_left" style="background-image: url(images/1.jpg) ;"></div>
+				</div>
 			</div>
 			<div class="frame">
-				awdawdawda awdawdadawdsdwd 			
+				<div class="frame_content">
+					<video class="frame-media frame-media_right" src="media/video_optimized.mp4" autoplay loop muted"></video>
+				</div>
 			</div>
+
+			<div class="frame"></div>
+
+			<div class="frame frame_bg">
+				<div class="frame_content text-right">
+					<h3>Pure planet</h3>
+					<p>Это текст я написал для моих близких братишек, которых я очень люблю и которых я берегу в своем сердце</p>
+				</div>
+			</div>
+
 			<div class="frame">
-				daOAWDOAWDOAOKWDKOAWDOKDKOAWD			
+				<div class="frame_content">
+					<div class="frame-media" style="background-image: url(images/1.jpg) ;"></div>
+				</div>
 			</div>
 
 		</section>
